# django-sendpdf

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.rst  contributors.txt  docker-compose.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
docs/: Makefile  make.bat
docs/source/: conf.py  getting_started.rst  index.rst
example_project/mysite/: settings.py  urls.py
sendpdf/: apps.py  topdf.py  urls.py  views.py
sendpdf/static/sendpdf/css/: print.css
sendpdf/templates/sendpdf/docs/: account_statement.html
sendpdf/templates/sendpdf/email/: statement.html  statement.txt
sendpdf/templatetags/: pdftags.py
tests/: test_settings.py  tests.py
