[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html
[bdist_wheel]
universal=1

[metadata]
name = django-sendpdf
version = 2.0.1
description = Generate PDF from html templates and print, view or send via email
long_description = file: README.rst
url = http://django-sendpdf.readthedocs.io/en/latest
download_url = https://github.com/wanderijames/django-sendpdf
author = James Wanderi
author_email = wanderikinyanjui@gmail.com
keywords =
    django
    PDF
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    pdfkit
